# tbgat

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  ttest.py
docs/: conf.py  index.rst
docs/how_to_guides/: component.rst  example_usage.rst  index.rst  pipeline.rst
docs/how_to_guides/prebuilt_pipelines/: index.rst
docs/reference/: api.rst  index.rst
tbgat/: cli.py
tbgat/Preprocessor/: Preprocessor.py  __init__.py
tbgat/_types/: GeoDoc.py  Language.py  OSM.py  Span.py  __init__.py
tbgat/language_detection/: LinguaLanguageDetection.py  __init__.py  _types.py  utils.py
tbgat/location_mapping/: LocationMappingResult.py  OpenStreetMapLocationMapper.py  OpenStreetMapModels.py  RateLimiter.py  __init__.py
tbgat/location_mapping2/: OpenStreetMapLocationMapper.py  OpenStreetMapModels.py  __init__.py
tbgat/ner/: HGFNerClassifier.py  __init__.py
tbgat/pattern_matching/: AhoCorasickMatcher.py  RegexMatcher.py  __init__.py  generate_gazetter.ipynb
tbgat/pattern_matching/data/: regex_adm1.csv
tbgat/pattern_matching/generated_data/: ukr_populated_places_20240607_large.csv  ukr_populated_places_20240607_medium.csv  ukr_populated_places_20240607_small.csv
tbgat/pipeline/: MultilingualResponse.py  Pipeline.py  __init__.py
tbgat/pipeline/prebuilt/: TBGATBasePipeline.py  TBGATPerformancePipeline.py  TBGATQualityPipeline.py  __init__.py
tbgat/postprocessing/: ADM1Mapper.py  SpecialCaseMatcher.py  _types.py
tbgat/shared/: PostProcessingReturnType.py  Span.py  __init__.py
tbgat/special_case_matcher/: SpecialCaseMatcher.py  __init__.py
tests/: test_pipeline.py
